# egui-video-player

./: Cargo.toml  README.md
examples/: player.rs
src/: app.rs  lib.rs  main.rs
src/player/: audio.rs  circular_buffer.rs  clock.rs  decoder.rs  mod.rs  video.rs
src/ui/: controls.rs
